# myo-panel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/myo_panel/: main.py
src/myo_panel/ble/: myo_constants.py  myo_manager.py
src/myo_panel/ui/: __init__.py  camera_manager.py  imu_viz.py  plots.py  recording.py  vision_recording.py  windows.py
src/myo_panel/vision/: __init__.py  camera_manager.py
tests/: test_battery.py
